refactor: added try and catch block
